<resources>
	<string name="app_name">C-SampleApp</string>

	<string name="bio_init_failed">Biometric initialization FAILED. Exiting application.</string>
	<string name="bio_init_pass">Biometrics initialized.</string>

	<string name="product_name">Product Name:</string>
	<string name="device_id">Device ID: </string>
	<string name="cid_service_version_label">C-Service Version: </string>
	<string name="device_lib_version_label">DeviceLib Version: </string>
	<string name="app_version">App Version: </string>

	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="capture">Capture</string>
	<string name="match">Match</string>

	<!-- ******************************************************************************************
	*
	* Finger
	*
	* ***************************************************************************************** -->

	<string name="fingerprint_selection_label">
		Click on a box to select that fingerprint for capture.
	</string>
	<string name="fingerprint_one_imageview_label">Fingerprint One</string>>
	<string name="fingerprint_two_imageview_label">Fingerprint Two</string>

	<!-- ******************************************************************************************
	*
	* Card
	*
	* ***************************************************************************************** -->

	<string name="open_card">Open CardReader</string>
	<string name="close_card_reader">Close CardReader</string>
	<string name="write_data">Write To Card</string>
	<string name="read_data">Read From Card</string>
	<string name="card_sync_checkbox_label">Use Synchronous APIs</string>
	<string name="card_edtitext_hint">Enter text to write to card</string>
	<string-array name="card_spinner_items">
		<item>Data Written To Card</item>
		<item>1K Data</item>
		<item>2K Data</item>
		<item>4K Data</item>
	</string-array>

	<string name="opening_card_reader">Opening card reader, please wait…</string>
	<string name="failed_open_card_reader">Failed to open card reader.</string>
	<string name="card_reader_opened">Card reader opened.</string>
	<string name="card_present">Card is present.</string>
	<string name="card_absent">Card is absent.</string>
	<string name="apdu_failed">APDU command failed, NULL response.</string>
	<string name="no_card_present_to_write_to">No card present to write to.</string>
	<string name="no_data_to_write_to_card">No data to write to card.</string>
	<string name="done_writing_to_card">Done writing data to card.</string>
	<string name="no_card_present_read_from">No card present to read from.</string>
	<string name="done_reading_from_card">Done reading data from card.</string>
	<string name="reading_card_wait">Reading data from card, please wait…</string>

	<string name="card_reader_fail_close">Card reader failed to close.</string>
	<string name="card_reader_closed">Card reader closed: </string>

	<!-- ******************************************************************************************
	*
	* Face
	*
	* ***************************************************************************************** -->

	<string name="flash_on_label">Flash On</string>
	<string name="flash_off_label">Flash Off</string>
	<string name="capture_label">Capture</string>
	<string name="recapture_label">Re-Capture</string>
	<string name="start_capture_hold_still">Starting capture, hold still…</string>
	<string name="autofocus_wait">Auto-focusing, please wait…</string>
	<string name="face_8mp_checkbox_label">8 Mepapixels</string>
	<string name="face_engine_analytics_title">Face Engine Analytics</string>
	<string name="face_engine_analyzing_wait">Analyzing image, please wait…</string>
	<string name="face_engine_fail">Failed to run face analysis. Please re-capture image.</string>
	<string name="retry">Retry</string>
	<string name="error">Error</string>
	<string name="err_cant_get_image">Unable to obtain image from camera, please retry.</string>

	<!-- ******************************************************************************************
	*
	* MRZ/EPassport/ICAO
	*
	* ***************************************************************************************** -->

	<string name="reading">Reading…</string>
	<string name="bac_failed">Failed to read document, BAC error.</string>
	<string name="icao_done">Finished reading document.</string>

	<string name="open_mrz">Open MRZ</string>
	<string name="close_mrz">Close MRZ</string>
	<string name="open_epassport">Open EPassport</string>
	<string name="close_epassport">Close EPassport</string>
	<string name="read_icao_button_label">Read ICAO</string>
	<string name="chip_auth_checkbox_label">Perform Chip Authentication</string>
	<string name="terminal_auth_checkbox_label">Perform Terminal Authentication</string>
	<string name="PACE_Key_switch_label">PACE KEY Type</string>
	<string name="PACE_Key_switch_on">CAN</string>
	<string name="PACE_Key_switch_off">BAC</string>
    <string name="load_certificates">Load Certificates</string>

	<string name="mrz_opening">Opening MRZ sensor…</string>
	<string name="mrz_open_failed">Failed to open MRZ sensor.</string>
	<string name="mrz_opened">MRZ sensor is open.</string>
	<string name="mrz_closed">MRZ sensor is closed.</string>
	<string name="mrz_failed_close">MRZ sensor failed to close.</string>

	<string name="epassport_opening">Opening EPassport reader…</string>
	<string name="epassport_open_failed">Failed to open EPassport reader.</string>
	<string name="epassport_opened">EPassport reader is open.</string>
	<string name="epassport_closed">EPassport Reader is closed.</string>

	<string name="mrz_failed_reswipe">Failed to read MRZ, please re-swipe document.</string>
	<string name="mrz_reading_wait">Reading MRZ, please wait…</string>
	<string name="mrz_read_success">MRZ successfully read.</string>
</resources>
